turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:32: error: type mismatch;
 found   : Array[Array[Int]]
 required: Char
  com(rule(ind))
          ^